chore(*): update/clean dependencies

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "dist",
   "scripts": {
     "build": "webpack",
-    "watch": "webpack --watch",
-    "start": "webpack-dev-server"
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -25,7 +24,7 @@
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.1.1"
   }
 }
